--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <footer class="text-center text-xs text-gray-400 mt-8">
-      <a href="https://geoecom.ge" target="_blank" rel="noopener">Website by GeoEcom</a>
+      <a href="https://digitalalchemy.ge/" target="_blank" rel="noopener">Website by Digital Alchemy</a>
     </footer>
   </body>
 </html>
