--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="/logo.jpg" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17933533033"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      window.gtag = gtag;
+      gtag("js", new Date());
+      gtag("config", "AW-17933533033", { send_page_view: false });
+    </script>
   </head>
 
   <body>
